# proxy-control-plane

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  alembic.ini  docker-compose.remote-db.yml  docker-compose.yml  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml  docker-release.yml
.local/: README.md  api.docker.env.example  api.local.env.example
.local.example/: README.md  api.docker.env  api.local.env  api.remote.env  app.env  cli.env  postgres.env
alembic/: env.py
alembic/versions/: 20260430_0001_initial_schema.py
cmd/proxy-control-plane/: main.go
internal/cli/: config.go  docker.go  env.go  import.go  maintenance.go  maintenance_test.go  root.go  service.go  subscription.go  subscription_test.go
internal/config/: config.go  config_test.go
internal/domain/: models.go  models_test.go
internal/httpapi/: server.go  server_test.go
internal/runtimesync/: sync.go  sync_test.go  xray.go  xray_test.go
internal/security/: security.go  security_test.go
internal/store/: domain_access.go  legacy_import.go  maintenance.go  migrations.go  (+6 more)
migrations/: 001_init.sql  002_add_validation_constraints.sql  003_add_proxy_node_runtime.sql  004_add_proxy_node_runtime_api.sql  005_restrict_proxy_node_runtime_to_xray.sql  006_add_subscription_aliases.sql  007_add_traffic_usage_daily.sql  008_drop_subscription_aliases.sql  009_add_subscription_token_encrypted_token.sql  010_add_domain_access_logs.sql  011_add_customer_auth_refresh_tokens.sql
tests/: conftest.py  test_admin_api.py  test_subscriptions.py
(+31 files in other folders)
