[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-control-plane"
version = "0.1.0"
description = "Control plane for proxy customers, accounts, nodes, and subscriptions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "email-validator>=2.2",
  "fastapi>=0.111",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
